# csc2026-fork

./: CMakeLists.txt  CONTRIBUTING.md
exercises/SD-E2-benchmark-and-optimize/: README.md
exercises/TT-E1-debugging-sanitizers/starter/src/: TrackReconstructor.cpp
exercises/TT-E2-docs-and-ci/ci-parallel-root/plots/: histogram_data_A.GamGam.root  histogram_data_B.GamGam.root  merged_histograms_data.root
